--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homework-react-2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/roswee/react-hm2/",
+  "homepage": "https://roswee.github.io/react-hm2/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
